--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,8 @@ main{
     justify-self: center;
     margin-top: 100px;
     line-height: 1.5;
+    justify-content: center;
+    align-items: center;
 }
 a{
     text-decoration: none;
