--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,6 @@ main{
     box-sizing: border-box;
     max-width: 720px;
     justify-self: center;
-    margin-top: 100px;
     line-height: 1.5;
     justify-content: center;
     align-items: center;
@@ -63,4 +62,9 @@ span{
         display: inline-block;
         justify-content: center;
         align-items: center;
+}
+@media screen and (max-width: 500px) {
+    #profileContainer {
+        width: 100%;
+    }
 }
