--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ span{
         align-items: center;
 }
 @media screen and (max-width: 500px) {
-    #profileContainer {
+    .wrapper {
         width: 100%;
     }
 }
